# minime

./: .gitignore  Makefile  MiniMe-Build-Plan.md  README.md  SETUP.md  TESTING.md  deepR_minime_impl_plan_aniket.md  minime-implementation-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_venv.ps1  setup_venv.sh
.cursor/plans/: week_1_implementation_plan_fd784cb5.plan.md
docs/: CODE_EXPLANATION.md  DOCUMENTATION_SUMMARY.md  EXPLANATION_EMBEDDINGS.md  EXPLANATION_IDENTITY.md  EXPLANATION_NOTE_SUMMARIZER.md  ML_CONCEPTS.md  README.md
docs/architecture/: ARCHITECTURE.md
docs/components/: EXPLANATION_CHUNK.md  EXPLANATION_DATABASE.md  EXPLANATION_EMBEDDINGS_MODEL.md  EXPLANATION_EMBEDDING_UTILS.md  EXPLANATION_FAISS.md  EXPLANATION_GRAPH_SERVICE.md  EXPLANATION_SEARCH.md  EXPLANATION_SESSION.md  EXPLANATION_SUMMARIZER.md  EXPLANATION_VISUALIZER.md  README.md
docs/concepts/: ML_CONCEPTS.md
docs/scripts/: README.md  SCRIPTS_DEMO.md  SCRIPTS_README.md  SCRIPTS_TESTING.md  SCRIPTS_UTILITIES.md  SCRIPTS_VISUALIZATION.md
minime/: __init__.py  config.py  schemas.py
minime/agents/: __init__.py
minime/context/: __init__.py
minime/feedback/: __init__.py
minime/graph/: __init__.py
minime/identity/: __init__.py  loader.py  principles.py
minime/mask/: __init__.py
minime/memory/: __init__.py  chunk.py  db.py  embeddings.py  (+8 more)
scripts/: README_TESTING.md  __init__.py  demo_memory.py  memory_explorer.py  quick_test.py  rebuild_faiss_index.py  test_faiss.py  test_memory.py  test_search.py  test_vault_indexing.py  viz_graph.py
tests/: __init__.py
(+9 files in other folders)
